welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:3: error: not found: value &&
     if (30<=b) && (b<=40){(return true)}
                ^in3050:3: error: type mismatch;
 found   : Unit
 required: Boolean
     if (30<=b) && (b<=40){(return true)}
     ^in3050:6: error: not found: value &&
     if (40<=b) && (b<=50){(return true)}
                ^in3050:6: error: type mismatch;
 found   : Unit
 required: Boolean
     if (40<=b) && (b<=50){(return true)}
     ^